append requirement.txt

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,55 +1,55 @@
-asttokens==2.4.1
-certifi==2024.8.30
-charset-normalizer==3.3.2
-click==8.1.7
-colorama==0.4.6
-comm==0.2.2
-debugpy==1.8.6
-decorator==5.1.1
-executing==2.1.0
-filelock==3.16.1
-fsspec==2024.9.0
-huggingface-hub==0.25.1
-idna==3.10
-ipykernel==6.29.5
-ipython==8.27.0
-jedi==0.19.1
-joblib==1.4.2
-jupyter_client==8.6.3
-jupyter_core==5.7.2
-matplotlib-inline==0.1.7
-nest-asyncio==1.6.0
-nltk==3.9.1
-numpy==2.1.1
-packaging==24.1
-pandas==2.2.3
-parso==0.8.4
-platformdirs==4.3.6
-prompt_toolkit==3.0.48
-psutil==6.0.0
-pure_eval==0.2.3
-pyaes==1.6.1
-pyasn1==0.6.1
-Pygments==2.18.0
-python-dateutil==2.9.0.post0
-python-dotenv==1.0.1
-pytz==2024.2
-pywin32==306
-PyYAML==6.0.2
-pyzmq==26.2.0
-regex==2024.9.11
-requests==2.32.3
-rsa==4.9
-safetensors==0.4.5
-six==1.16.0
-stack-data==0.6.3
-Telethon==1.37.0
-tokenizers==0.20.0
-tornado==6.4.1
-tqdm==4.66.5
-traitlets==5.14.3
-transformers==4.45.1
-typing_extensions==4.12.2
-tzdata==2024.2
-urllib3==2.2.3
-wcwidth==0.2.13
+asttokens
+certifi
+charset-normalizer
+click
+colorama
+comm
+debugpy
+decorator
+executing
+filelock
+fsspec
+huggingface-hub
+idna
+ipykernel
+ipython
+jedi
+joblib
+jupyter_client
+jupyter_core
+matplotlib-inline
+nest-asynci
+nltk
+numpy
+packaging
+pandas
+parso
+platformdirs
+prompt_toolkit
+psutil
+pure_eval
+pyaes
+pyasn1
+Pygments
+python-dateutil
+python-dotenv
+pytz
+pywin32
+PyYAML
+pyzmq
+regex
+requests
+rsa
+safetensors
+six
+stack-data
+Telethon
+tokenizers
+tornado
+tqdm
+traitlets
+transformers
+typing_extensions
+tzdata
+urllib3
+wcwidth
